# AurigaiaRead

./: .Example_AurigaRead.py  Example_AurigaiaRead.ipynb  README.md  example_AurigaiaRead.toml  pyproject.toml
AurigaiaRead/: AurigaiaSnap_class.py  __init__.py  attributes.py  aurigaia_halo_params.py  aurigaia_read.py  aurigaia_utils.py  config.py  file_names.py  transfer.py
old_aurigaia/: coords.py  galactic_aurigaia.py  read_aurigaia.py
