[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AurigaiaRead"
version = "0.1.0"
authors = [{ name = "Tom Callingham", email = "tom.m.callingham@gmail.com" }]
description = "A package to read the Aurigaia of the Auriga Simulations using extended Pynbody."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "astropy",
  "agama",
  "toml",
  # "pynbody @ git+https://github.com/TomCallingham/pynbody@AurigaiaRead",
]

[tool.setuptools.packages.find]
where = ["."]
